Changelog
=========

0.10 - Unreleased
-----------------

* Add possibility to specify packages for ``update`` command.
  [fschulze]

* Ignore '.svn' in ``status`` command.
  [fschulze]

* Tell the user at the end of the buildout run whether there have been any
  errors during automatic checkout.
  [fschulze]

* Install the ``develop`` script as the first part instead of the last, so it
  can be used to fix problems.
  [fschulze]

0.9 - 2009-03-30
----------------

* When installed as just an egg, then the resulting ``develop`` script can be
  called from anywhere and will try to find the correct ``develop`` script
  from the current working directory and execute it.
  [fschulze]

* Fixed help text formatting.
  [fschulze]

0.8 - 2009-03-25
----------------

* Added authentication support to subversion commands.
  [fschulze]

* Added ``-a`` option to ``checkout`` command to limit matching to the
  packages declared by the ``auto-checkout`` option. If no further argument
  is given, then all the packages from ``auto-checkout`` are processed.
  [fschulze]

0.7 - 2009-03-24
----------------

* Added ``update`` command to ``checkout`` script.
  [fschulze]

* Added ``status`` command to ``checkout`` script.
  [fschulze]

* Added status flag to ``list`` command to indicate packages with wrong URL.
  [fschulze]

* If the working copy is clean, then checkout automatically switches svn
  packages.
  [fschulze]

* Skip on checkout errors during buildout, so the develop script is generated
  and you get a chance to inspect and fix the problems.
  [fschulze]

* Check remote url and stop checkout if it differs.
  [fschulze]

* Added various options to the ``list`` command.
  [fschulze]

* Instead of the ``checkout`` script, there is now a ``develop`` script with
  various commands.
  [fschulze]

0.6 - 2009-03-24
----------------

* Added custom logging formatter for nicer output in the checkout script.
  [fschulze]
