@@ -26,9 +26,8 @@ class GitError(Exception):
 
 
 class WorkingCopies(object):
-    def __init__(self, sources, sources_dir):
+    def __init__(self, sources):
         self.sources = sources
-        self.sources_dir = sources_dir
         self._svn_info_cache = {}
         self._svn_auth_cache = {}
         self.accept_invalid_certs = True
@@ -38,7 +37,7 @@ class WorkingCopies(object):
             if url.startswith(root):
                 return self._svn_auth_cache[root]
 
-    def _svn_error_wrapper(self, f, name, url):
+    def _svn_error_wrapper(self, f, source):
         count = 4
         accept_invalid_cert = False
         while count:
@@ -46,13 +45,13 @@ class WorkingCopies(object):
             try:
                 if accept_invalid_cert:
                     accept_invalid_cert = False
-                    return f(name, url, accept_invalid_cert=True)
+                    return f(source, accept_invalid_cert=True)
                 else:
-                    return f(name, url)
+                    return f(source)
             except SVNAuthorizationError, e:
                 lines = e.args[0].split('\n')
                 root = lines[-1].split('(')[-1].strip(')')
-                print "Authorization needed for '%s'" % url
+                print "Authorization needed for '%s'" % source['url']
                 user = raw_input("Username: ")
                 passwd = getpass.getpass("Password: ")
                 self._svn_auth_cache[root] = dict(
@@ -69,8 +68,10 @@ class WorkingCopies(object):
                 else:
                     raise
 
-    def _svn_checkout(self, name, url, accept_invalid_cert=False):
-        path = os.path.join(self.sources_dir, name)
+    def _svn_checkout(self, source, accept_invalid_cert=False):
+        name = source['name']
+        path = source['path']
+        url = source['url']
         if os.path.exists(path):
             logger.info("Skipped checkout of existing package '%s'." % name)
             return
@@ -107,10 +108,11 @@ class WorkingCopies(object):
                 raise SVNCertificateError(stderr.strip())
         return stdout, stderr, cmd.returncode
 
-    def _svn_info(self, name):
+    def _svn_info(self, source):
+        name = source['name']
         if name in self._svn_info_cache:
             return self._svn_info_cache[name]
-        path = os.path.join(self.sources_dir, name)
+        path = source['path']
         cmd = subprocess.Popen(["svn", "info", "--non-interactive", "--xml",
                                 path],
                                stdout=subprocess.PIPE,
@@ -133,31 +135,36 @@ class WorkingCopies(object):
         self._svn_info_cache[name] = result
         return result
 
-    def _svn_switch(self, name, url, accept_invalid_cert=False):
-        path = os.path.join(self.sources_dir, name)
+    def _svn_switch(self, source, accept_invalid_cert=False):
+        name = source['name']
+        path = source['path']
+        url = source['url']
         logger.info("Switching '%s' with subversion." % name)
         args = ["svn", "switch", url, path]
         stdout, stderr, returncode = self._svn_communicate(args, url, accept_invalid_cert)
         if returncode != 0:
             raise SVNError("Subversion switch for '%s' failed.\n%s" % (name, stderr))
 
-    def _svn_update(self, name, url=None, accept_invalid_cert=False):
-        path = os.path.join(self.sources_dir, name)
+    def _svn_update(self, source, accept_invalid_cert=False):
+        name = source['name']
+        path = source['path']
+        url = source['url']
         logger.info("Updating '%s' with subversion." % name)
         args = ["svn", "update", path]
         stdout, stderr, returncode = self._svn_communicate(args, url, accept_invalid_cert)
         if returncode != 0:
             raise SVNError("Subversion update for '%s' failed.\n%s" % (name, stderr))
 
-    def svn_checkout(self, name, url):
-        return self._svn_error_wrapper(self._svn_checkout, name, url)
+    def svn_checkout(self, source):
+        return self._svn_error_wrapper(self._svn_checkout, source)
 
-    def svn_matches(self, name, url):
-        info = self._svn_info(name)
-        return (info.get('url') == url)
+    def svn_matches(self, source):
+        info = self._svn_info(source)
+        return (info.get('url') == source['url'])
 
-    def svn_status(self, name):
-        path = os.path.join(self.sources_dir, name)
+    def svn_status(self, source):
+        name = source['name']
+        path = source['path']
         cmd = subprocess.Popen(["svn", "status", "--xml", path],
                                stdout=subprocess.PIPE,
                                stderr=subprocess.PIPE)
@@ -175,16 +182,18 @@ class WorkingCopies(object):
         else:
             return 'dirty'
 
-    def svn_switch(self, name, url):
-        return self._svn_error_wrapper(self._svn_switch, name, url)
+    def svn_switch(self, source):
+        return self._svn_error_wrapper(self._svn_switch, source)
 
-    def svn_update(self, name):
-        info = self._svn_info(name)
+    def svn_update(self, source):
+        info = self._svn_info(source)
         url = info.get('url')
-        return self._svn_error_wrapper(self._svn_update, name, url)
+        return self._svn_error_wrapper(self._svn_update, source)
 
-    def git_checkout(self, name, url):
-        path = os.path.join(self.sources_dir, name)
+    def git_checkout(self, source):
+        name = source['name']
+        path = source['path']
+        url = source['url']
         if os.path.exists(path):
             logger.info("Skipped cloning of existing package '%s'." % name)
             return
@@ -195,8 +204,9 @@ class WorkingCopies(object):
         if cmd.returncode != 0:
             raise GitError("git cloning for '%s' failed.\n%s" % (name, stderr))
 
-    def git_matches(self, name, url):
-        path = os.path.join(self.sources_dir, name)
+    def git_matches(self, source):
+        name = source['name']
+        path = source['path']
         cmd = subprocess.Popen(["git", "remote", "-v"],
                                cwd=path,
                                stdout=subprocess.PIPE,
@@ -204,10 +214,11 @@ class WorkingCopies(object):
         stdout, stderr = cmd.communicate()
         if cmd.returncode != 0:
             raise GitError("git remote for '%s' failed.\n%s" % (name, stderr))
-        return (url in stdout.split())
+        return (source['url'] in stdout.split())
 
-    def git_status(self, name):
-        path = os.path.join(self.sources_dir, name)
+    def git_status(self, source):
+        name = source['name']
+        path = source['path']
         cmd = subprocess.Popen(["git", "status"],
                                cwd=path,
                                stdout=subprocess.PIPE,
@@ -219,8 +230,9 @@ class WorkingCopies(object):
         else:
             return 'dirty'
 
-    def git_update(self, name):
-        path = os.path.join(self.sources_dir, name)
+    def git_update(self, source):
+        name = source['name']
+        path = source['path']
         logger.info("Updating '%s' with git." % name)
         cmd = subprocess.Popen(["git", "pull"],
                                cwd=path,
@@ -239,37 +251,37 @@ class WorkingCopies(object):
                     sys.exit(1)
                 else:
                     errors = True
-            kind, url = self.sources[name]
+            source = self.sources[name]
             try:
-                if kind=='svn':
-                    path = os.path.join(self.sources_dir, name)
+                if source['kind']=='svn':
+                    path = source['path']
                     if os.path.exists(path):
-                        if self.svn_matches(name, url):
+                        if self.svn_matches(source):
                             logger.info("Skipped checkout of existing package '%s'." % name)
                         else:
-                            if self.svn_status(name) == 'clean':
-                                self.svn_switch(name, url)
+                            if self.svn_status(source) == 'clean':
+                                self.svn_switch(source)
                             else:
-                                logger.error("Can't switch package '%s' from '%s', because it's dirty." % (name, url))
+                                logger.error("Can't switch package '%s' from '%s', because it's dirty." % (name, source['url']))
                                 if not skip_errors:
                                     sys.exit(1)
                                 else:
                                     errors = True
                     else:
-                        self.svn_checkout(name, url)
-                elif kind=='git':
-                    path = os.path.join(self.sources_dir, name)
+                        self.svn_checkout(source)
+                elif source['kind']=='git':
+                    path = source['path']
                     if os.path.exists(path):
-                        if self.git_matches(name, url):
+                        if self.git_matches(source):
                             logger.info("Skipped checkout of existing package '%s'." % name)
                         else:
-                            logger.error("Checkout URL for existing package '%s' differs. Expected '%s'." % (name, url))
+                            logger.error("Checkout URL for existing package '%s' differs. Expected '%s'." % (name, source['url']))
                             if not skip_errors:
                                 sys.exit(1)
                             else:
                                 errors = True
                     else:
-                        self.git_checkout(name, url)
+                        self.git_checkout(source)
                 else:
                     logger.error("Unknown repository type '%s'." % kind)
                     if not skip_errors:
@@ -285,16 +297,17 @@ class WorkingCopies(object):
                     errors = True
         return errors
 
-    def matches(self, name):
+    def matches(self, source):
+        name = source['name']
         if name not in self.sources:
             logger.error("Checkout failed. No source defined for '%s'." % name)
             sys.exit(1)
-        kind, url = self.sources[name]
+        source = self.sources[name]
         try:
-            if kind=='svn':
-                return self.svn_matches(name, url)
-            elif kind=='git':
-                return self.git_matches(name, url)
+            if source['kind']=='svn':
+                return self.svn_matches(source)
+            elif source['kind']=='git':
+                return self.git_matches(source)
             else:
                 logger.error("Unknown repository type '%s'." % kind)
                 sys.exit(1)
@@ -303,16 +316,17 @@ class WorkingCopies(object):
                 logger.error(l)
             sys.exit(1)
 
-    def status(self, name):
+    def status(self, source):
+        name = source['name']
         if name not in self.sources:
             logger.error("Status failed. No source defined for '%s'." % name)
             sys.exit(1)
-        kind, url = self.sources[name]
+        source = self.sources[name]
         try:
-            if kind=='svn':
-                return self.svn_status(name)
-            elif kind=='git':
-                return self.git_status(name)
+            if source['kind']=='svn':
+                return self.svn_status(source)
+            elif source['kind']=='git':
+                return self.git_status(source)
             else:
                 logger.error("Unknown repository type '%s'." % kind)
                 sys.exit(1)
@@ -325,29 +339,29 @@ class WorkingCopies(object):
         for name in packages:
             if name not in self.sources:
                 continue
-            kind, url = self.sources[name]
+            source = self.sources[name]
             try:
-                if kind=='svn':
-                    path = os.path.join(self.sources_dir, name)
-                    if not self.svn_matches(name, url):
-                        if self.svn_status(name) == 'clean':
-                            self.svn_switch(name, url)
+                if source['kind']=='svn':
+                    path = source['path']
+                    if not self.svn_matches(source):
+                        if self.svn_status(source) == 'clean':
+                            self.svn_switch(source)
                         else:
                             logger.error("Can't switch package '%s', because it's dirty." % name)
                             continue
-                    if self.svn_status(name) != 'clean':
+                    if self.svn_status(source) != 'clean':
                         logger.error("Can't update package '%s', because it's dirty." % name)
                         continue
-                    self.svn_update(name)
-                elif kind=='git':
-                    path = os.path.join(self.sources_dir, name)
-                    if not self.git_matches(name, url):
+                    self.svn_update(source)
+                elif source['kind']=='git':
+                    path = source['path']
+                    if not self.git_matches(source):
                         logger.info("Skipped update of existing package '%s', because it's URL doesn't match." % name)
                         continue
-                    if self.git_status(name) != 'clean':
+                    if self.git_status(source) != 'clean':
                         logger.error("Can't update package '%s', because it's dirty." % name)
                         continue
-                    self.git_update(name)
+                    self.git_update(source)
                 else:
                     logger.error("Unknown repository type '%s'." % kind)
                     continue
